2004-04-26  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (autosave_load_draft): Only unlink the original
	autosave draft file if we are successful in saving a new copy,
	otherwise don't unlink the file. Fixes bug #57540.

2004-04-23  Not Zed  <NotZed@Ximian.com>

	* e-msg-composer-attachment-bar.c (update): fallback to stock
	unknown if we can't ifnd the icon.  #56717.

2004-04-19  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (create_composer): Use the E_ICON_SIZE enums
	rather than specifying an absolute pixel size.

2004-04-19  Michael Terry  <mike@mterry.name>

	* e-msg-composer.c: Update the composer to use the icon theme via
	the EIconFactory object in e-util

2004-04-15  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer-attachment-bar.c (attach_to_multipart): Same idea
	here as with build_mesage(), don't convert th gconf charset
	setting to the iconv name before setting it on the mime part.

	* e-msg-composer.c (best_charset): Now returns a malloc'd string
	bufefr containing the charset that has NOT been converted to the
	iconv name. This is important in order to avoid using the iconv
	charset name which may or may not necessarily be the IANA blessed
	name.
	(composer_get_default_charset_setting): Changed to always return
	the actual value in the settings (eg. don't return the iconv
	name).
	(build_message): Updated for changes to best_charset(). Set the
	actual charset name as the charset param and then get the
	iconv_charset from that. Use iconv_charset everywhere else.
	(get_file_content): Updated for changes to
	get_default_charset_setting().
	(setup_ui): Same.

2004-04-13  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (get_file_content): To be on the safe side
	(even though the real bug behind bug #51924 can't happen here),
	protect against adding a NULL charset filter tot he filtered
	stream.

2004-04-13  Larry Ewing  <lewing@ximian.com>

	* e-msg-composer.c (drag_data_received): accept text/calendar
	drops.
