@@ -1,3 +1,9 @@
+2004-04-27  Not Zed  <NotZed@Ximian.com>
+
+	* e-msg-composer-attachment-bar.c (update): duh, pass the string
+	not the content type to the warning message.  And derrr, print it
+	for the actual error case, not the ok case.  Fixes #57680.
+
 2004-04-26  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* e-msg-composer.c (autosave_load_draft): Only unlink the original
